# app/model/okrReplay.go
@@ -13,8 +13,7 @@ type OkrReplay struct {
 	OkrTitle        string              `gorm:"type:varchar(255);comment:'目标标题'" json:"okr_title"`
 	OkrProgress     int                 `gorm:"default:0;comment:'目标完成度'" json:"okr_progress"`
 	OkrPriority     string              `gorm:"type:varchar(10);comment:'优先级'" json:"okr_priority"`
-	Value           string              `gorm:"type:varchar(255);comment:'价值与收获'" json:"value"`
-	Problem         string              `gorm:"type:varchar(255);comment:'问题与不足'" json:"problem"`
+	Review          string              `gorm:"type:varchar(255);comment:'回顾'" json:"review"`
 	CreateAt        time.Time           `gorm:"autoCreateTime;comment:'创建时间'" json:"create_at"`
 	UpdateAt        time.Time           `gorm:"autoUpdateTime;comment:'更新时间'" json:"update_at"`
 	KrHistory       []*OkrReplayHistory `gorm:"foreignkey:ReplayId" json:"kr_history"`
